# arcanoid-opengl

./: .gitignore  CMakeLists.txt  Makefile  Makefile_debug  Makefile_mac  README.md  TODO.md  constants.h  errors.cpp  errors.h  game.cpp  game.h  main_file.cpp  main_file_base  main_file_base.cpp  recompile.sh  scene.cpp  scene.h  window.cpp  window.h
models/: model.cpp  model.h  wall-vertical.mtl
models/ball/: ball.cpp  ball.h
models/boundingBox/: boundingBox.cpp  boundingBox.h
models/brick/: brick.blend  brick.cpp  brick.h
models/horizontal-wall/: horizontal-wall.blend  horizontal-wall.cpp  horizontal-wall.h  horizontal-wall.mtl
models/paddle/: paddle.blend  paddle.cpp  paddle.h
models/vertical-wall/: vertical-wall.blend  vertical-wall.cpp  vertical-wall.h  vertical-wall.mtl
models/wall/: wall.cpp  wall.h
shader/: fshader.frag  shader.cpp  shader.h  shaders.cpp  shaders.h  vshader.vert
shader/color/: color-shader.cpp  color-shader.h  fragmentShader.frag  vertexShader.vert
shader/metal/: fragmentShader.frag  metal-shader.cpp  metal-shader.h
shader/texture/: fragmentShader.frag  texture-shader.cpp  texture-shader.h  vertexShader.vert
utils/: bounce.cpp  bounce.h  does_collide.cpp  does_collide.h  obj_loader.cpp  obj_loader.h
